# stravAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
chainlit/: chainlit.md  chainlit_app.py  duckdb_layer.py  pipeline.py
src/strava_agent/: __main__.py  authenticate.py  graph.py  llm.py  logger.py  prompts.py  tools.py
tests/: conftest.py  test_authenticate.py  test_graph.py  test_llm.py  test_main.py  test_prompts.py  test_tools.py
