[project]
name = "strava-agent"
version = "0.1.0"
description = "AI agent to ask questions on your Strava activities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.7",
    "ollama>=0.6.1",
    "stravalib>=2.4",
    "duckdb>=1.1.3",
]

[project.scripts]
strava-agent = "strava_agent.__main__:main"
strava-auth = "strava_agent.authenticate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strava_agent"]

[dependency-groups]
frontend = [
    "chainlit>=2.9.6",
]
test = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
